@@ -1,12 +1,12 @@
-854595242827-tkecrgj4b8bpchermrba6vs5ig7a4o2c.apps.googleusercontent.com:o7nZynvNCrp7u4WbhqopIpd1@https://accounts.google.com/
+854595242827-tkecrgj4b8bpchermrba6vs5ig7a4o2c.apps.googleusercontent.com:o7nZynvNCrp7u4WbhqopIpd1@https://accounts.google.com/@openid profile
 7b3b85df-1965-41b9-b4e2-476f0eb0d5df@https://oidc.scc.kit.edu/auth/realms/kit/
-70806df4-3fad-4c6c-a7e8-49b554c85b6f@https://iam-test.indigo-datacloud.eu/
-f1f5d80d-849e-4324-9676-8b103604281f@https://iam.deep-hybrid-datacloud.eu/
-441d0d59-bfb3-430e-8142-10b73cae3cc4@https://iam.extreme-datacloud.eu/
-222df837-7c79-431f-ae80-5a75ec56e324@https://iam-demo.cloud.cnaf.infn.it/
+70806df4-3fad-4c6c-a7e8-49b554c85b6f@https://iam-test.indigo-datacloud.eu/@address phone openid profile offline_access eduperson_scoped_affiliation aarc email eduperson_entitlement
+f1f5d80d-849e-4324-9676-8b103604281f@https://iam.deep-hybrid-datacloud.eu/@address iam phone openid profile offline_access eduperson_scoped_affiliation email eduperson_entitlement
+441d0d59-bfb3-430e-8142-10b73cae3cc4@https://iam.extreme-datacloud.eu/@address phone openid profile offline_access eduperson_scoped_affiliation email eduperson_entitlement wlcg
+222df837-7c79-431f-ae80-5a75ec56e324@https://iam-demo.cloud.cnaf.infn.it/@address phone openid email profile offline_access
 oidc-agent@https://aai-dev.egi.eu/oidc/
 oidc-agent@https://aai-demo.egi.eu/oidc/
 oidc-agent@https://aai.egi.eu/oidc/
-7c98b37b-71ab-4b35-aade-25642d4695e6@https://services.humanbrainproject.eu/oidc/
-ef13f849-b1ce-4c10-b28f-4a5f19b84fe0@https://login.elixir-czech.org/oidc/
-7d6ad1c2-6647-4846-b0d5-c9f6ad0987d0@https://wlcg.cloud.cnaf.infn.it/
+7c98b37b-71ab-4b35-aade-25642d4695e6@https://services.humanbrainproject.eu/oidc/@hbp.users hbp.documents hbp.gerrit offline_access hbp.task hbp.provenance openid hbp.collab hbp.collab.self hbp.groups profile
+ef13f849-b1ce-4c10-b28f-4a5f19b84fe0@https://login.elixir-czech.org/oidc/@country address forwardedScopedAffiliations phone openid offline_access profile bona_fide_status email eduperson_entitlement
+7d6ad1c2-6647-4846-b0d5-c9f6ad0987d0@https://wlcg.cloud.cnaf.infn.it/@openid profile email address phone offline_access wlcg wlcg.groups storage.read:/ storage.create:/ storage.modify:/ eduperson_entitlement eduperson_scoped_affiliation
