@@ -39,6 +39,45 @@ int account_matchByIssuerUrl(const struct oidc_account* p1,
   return matchUrls(account_getIssuerUrl(p1), account_getIssuerUrl(p2));
 }
 
+struct pubClientInfos {
+  char* client_id;
+  char* client_secret;
+  char* scope;
+};
+
+void secFreePubClientInfos(struct pubClientInfos p) {
+  secFree(p.client_id);
+  secFree(p.client_secret);
+  secFree(p.scope);
+}
+
+struct pubClientInfos _getPubClientInfos(const char* issuer) {
+  struct pubClientInfos ret = {0, 0, 0};
+  list_t* pubClientLines    = getLinesFromFile(ETC_PUBCLIENTS_CONFIG_FILE);
+  if (pubClientLines == NULL) {
+    return ret;
+  }
+  list_node_t*     node;
+  list_iterator_t* it = list_iterator_new(pubClientLines, LIST_HEAD);
+  while ((node = list_iterator_next(it))) {
+    char* client = strtok(node->val, "@");
+    char* iss    = strtok(NULL, "@");
+    char* scope  = strtok(NULL, "@");
+    // logger(DEBUG, "Found public client for '%s'", iss);
+    if (compIssuerUrls(issuer, iss)) {
+      char* client_id     = strtok(client, ":");
+      char* client_secret = strtok(NULL, ":");
+      ret.client_id       = oidc_strcopy(client_id);
+      ret.client_secret   = oidc_strcopy(client_secret);
+      ret.scope           = oidc_strcopy(scope);
+      break;
+    }
+  }
+  list_iterator_destroy(it);
+  list_destroy(pubClientLines);
+  return ret;
+}
+
 /**
  * reads the pubclient.conf file and updates the account struct if a public
  * client is found for that issuer, also setting the redirect uris
@@ -51,35 +90,25 @@ struct oidc_account* updateAccountWithPublicClientInfo(
     oidc_setArgNullFuncError(__func__);
     return NULL;
   }
-  char*   issuer_url     = account_getIssuerUrl(account);
-  list_t* pubClientLines = getLinesFromFile(ETC_PUBCLIENTS_CONFIG_FILE);
-  if (pubClientLines == NULL) {
-    return NULL;
-  }
-  list_node_t*     node;
-  list_iterator_t* it = list_iterator_new(pubClientLines, LIST_HEAD);
-  while ((node = list_iterator_next(it))) {
-    char* client = strtok(node->val, "@");
-    char* iss    = strtok(NULL, "@");
-    // logger(DEBUG, "Found public client for '%s'", iss);
-    if (compIssuerUrls(issuer_url, iss)) {
-      char* client_id     = strtok(client, ":");
-      char* client_secret = strtok(NULL, ":");
-      account_setClientId(account, oidc_strcopy(client_id));
-      account_setClientSecret(account, oidc_strcopy(client_secret));
-      logger(DEBUG, "Using public client with id '%s' and secret '%s'",
-             client_id, client_secret);
-      list_t* redirect_uris =
-          createList(0, "http://localhost:8080", "http://localhost:4242",
-                     "http://localhost:43985", NULL);
-      redirect_uris->match = (matchFunction)strequal;
-      account_setRedirectUris(account, redirect_uris);
-      break;
-    }
-  }
-  list_iterator_destroy(it);
-  list_destroy(pubClientLines);
+  struct pubClientInfos pub = _getPubClientInfos(account_getIssuerUrl(account));
+  account_setClientId(account, oidc_strcopy(pub.client_id));
+  account_setClientSecret(account, oidc_strcopy(pub.client_secret));
+  logger(DEBUG, "Using public client with id '%s' and secret '%s'",
+         pub.client_id, pub.client_secret);
+  secFreePubClientInfos(pub);
+  list_t* redirect_uris =
+      createList(0, "http://localhost:8080", "http://localhost:4242",
+                 "http://localhost:43985", NULL);
+  redirect_uris->match = (matchFunction)strequal;
+  account_setRedirectUris(account, redirect_uris);
   return account;
+}
+
+char* getScopesForPublicClient(const struct oidc_account* p) {
+  struct pubClientInfos pub   = _getPubClientInfos(account_getIssuerUrl(p));
+  char*                 scope = oidc_strcopy(pub.scope);
+  secFreePubClientInfos(pub);
+  return scope;
 }
 
 /**
