@@ -50,6 +50,7 @@ void   _secFreeAccount(struct oidc_account* p);
 void   secFreeAccountContent(struct oidc_account* p);
 
 struct oidc_account* updateAccountWithPublicClientInfo(struct oidc_account*);
+char*                getScopesForPublicClient(const struct oidc_account*);
 int                  accountConfigExists(const char* accountname);
 char*                getAccountNameList(list_t* accounts);
 int                  hasRedirectUris(const struct oidc_account* account);
